manifests/apps/objectstore-manager/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: objectstore-manager
spec:
  gateways:
    - os4ml/os4ml-gateway
  hosts:
    - '*'
  http:
    - name: "objectstore-manager-route"
      match:
        - uri:
            regex: \/apis\/.*\/objectstore.*
      route:
        - destination:
            host: objectstore-manager.os4ml.svc.cluster.local
            port:
              number: 8000
